# codeExampleCollection

./: README.md
c++/mtgNonDeterministicSim/: .gitignore  CMakeLists.txt  README.md
c++/mtgNonDeterministicSim/examples/: CMakeLists.txt  simpleGitrogCombo.cpp  simpleRIpple.cpp
c++/mtgNonDeterministicSim/inc/: deck.hpp
c++/mtgNonDeterministicSim/postproc/: analyseRipple.py
c++/mtgNonDeterministicSim/src/: CMakeLists.txt  deck.cpp
c++/mtgTemplateExample/: Readme.md
c++/mtgTemplateExample/inc/: Readme.md  utilStructs.h
c++/mtgTemplateExample/lib/: Readme.md
c++/mtgTemplateExample/src/: Readme.md
c++/mtgTemplateExample/tests/: Readme.md
python/abstractPyTemplate/: .gitignore  Doxyfile
python/abstractPyTemplate/examples/: skript.py
python/abstractPyTemplate/geo_lin_dep/: Dreieck.py  Kreis.py  Quadrat.py
python/abstractPyTemplate/geo_tree_dep/: Dreieck.py  Kreis.py  Polygon.py  Quadrat.py
python/abstractPyTemplate/geo_tree_dep/D3/: Polyeder.py  Quader.py
python/pyAutoTesting/: .gitignore  .gitlab-ci.yml  Doxyfile  README.md
python/pyAutoTesting/doc/: Makefile  README.md  conf.py  index.rst  make.bat
python/pyAutoTesting/randomFuncDrawer/: app.py
python/pyAutoTesting/randomFuncDrawer/funcCalc/: triCalcer.py
python/pyAutoTesting/randomFuncDrawer/funcDraw/: drawer.py
python/pyAutoTesting/randomFuncDrawer/tests/: test_drawer.py  test_triCalcer.py
